# apptemplate

./: .gitignore  BuildLinux.sh  BuildWindows.bat  CMakeLists.txt  LICENSE  README.md  README.md~
CMake/: ExternalGTest.cmake  FindGTest.cmake  gtest.cmake
dependencies/: CMakeLists.txt
include/: AppCore.h
src/: AppCore.cpp  AppCore.cpp~  AppCore.h~  CMakeLists.txt  CMakeLists.txt~  LynxBot.cpp~  main.cpp  main.cpp~
test/: AppTest.cpp  AppTest.cpp~  CMakeLists.txt  CMakeLists.txt~
